<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginActivity"
            type="com.itsupportwale.dastaan.activity.LoginActivity" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        tools:context=".activity.LandingActivity">
        <ImageView
            android:layout_above="@+id/contentthis"
            android:paddingTop="@dimen/dim_60_dp"
            android:padding="@dimen/dim_50_dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ivOnboard0"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_150_dp"
            android:src="@drawable/dastaan_land" />

        <LinearLayout
            android:id="@+id/contentthis"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dim_100_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/continueBtn"
                android:gravity="center"
                android:textSize="@dimen/text_size_16sp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/continueWithoutLogin"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/dim_10_dp"
                android:paddingVertical="@dimen/dim_10_dp"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:background="@drawable/blue_capsule"
                android:layout_height="wrap_content"
                android:fontFamily="@font/louis_george_cafe_bold"
                />
            <TextView
                android:gravity="center"
                android:textSize="@dimen/text_size_20sp"
                android:layout_width="match_parent"
                android:textColor="@color/colorHeadings"
                android:text="@string/login_to_continue"
                android:layout_marginBottom="@dimen/dim_20_dp"
                android:paddingVertical="@dimen/dim_10_dp"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/louis_george_cafe_bold"
                />
            <LinearLayout
                android:paddingHorizontal="@dimen/dim_10_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:background="@drawable/edit_back_capsule"
                android:layout_marginBottom="@dimen/dim_20_dp"
                >
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/dim_20_dp"
                    android:layout_height="@dimen/dim_20_dp"
                    android:src="@drawable/mail_icon"
                    />
                <EditText
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor_dark"
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dim_10_dp"
                    android:textColorHint="@color/black_overlay"
                    android:textSize="14sp"
                    android:textColor="@color/colorHeadings"
                    android:fontFamily="@font/louis_george_cafe_bold"
                    android:imeOptions="actionNext"
                    />
            </LinearLayout>

            <LinearLayout
                android:paddingHorizontal="@dimen/dim_10_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:background="@drawable/edit_back_capsule"
                android:layout_marginBottom="@dimen/dim_20_dp"
                >
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/dim_20_dp"
                    android:layout_height="@dimen/dim_20_dp"
                    android:src="@drawable/password_icon"
                    />
                <EditText
                    android:layout_gravity="center_vertical"
                    android:textCursorDrawable="@drawable/color_cursor_dark"
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dim_10_dp"
                    android:textColorHint="@color/black_overlay"
                    android:textSize="14sp"
                    android:background="@null"
                    android:textColor="@color/colorHeadings"
                    android:fontFamily="@font/louis_george_cafe_bold"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/loginBtn"
                android:gravity="center"
                android:textSize="@dimen/text_size_16sp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/dim_10_dp"
                android:paddingVertical="@dimen/dim_10_dp"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:background="@drawable/blue_capsule"
                android:layout_height="wrap_content"
                android:fontFamily="@font/louis_george_cafe_bold"
                />
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                >
                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/text_size_12sp"
                    android:layout_width="wrap_content"
                    android:text="@string/don_t_have_account"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:paddingVertical="@dimen/dim_10_dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    />
                <TextView
                    android:gravity="center"
                    android:textSize="@dimen/text_size_12sp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text=" "
                    android:textAllCaps="true"
                    android:paddingVertical="@dimen/dim_10_dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    />
                <TextView
                    android:id="@+id/registerBtn"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_12sp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:paddingVertical="@dimen/dim_10_dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/forgotPasswordBtn"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_size_12sp"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:paddingVertical="@dimen/dim_10_dp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_height="wrap_content"
                />
            <TextView
                android:visibility="gone"
                android:gravity="center"
                android:textSize="@dimen/text_size_12sp"
                android:layout_width="match_parent"
                android:text="@string/or"
                android:textAllCaps="true"
                android:paddingVertical="@dimen/dim_10_dp"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/louis_george_cafe_bold"
                />
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/facebookBtn"
                android:background="@drawable/facebook_capsule"
                android:layout_marginBottom="@dimen/dim_10_dp"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                >
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/facebook"
                    android:textAllCaps="true"
                    android:paddingVertical="@dimen/dim_10_dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/louis_george_cafe_bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/googleBtn"
                android:background="@drawable/google_capsule"
                android:layout_marginBottom="@dimen/dim_50_dp"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/dim_50_dp"
                >
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/google"
                    android:textAllCaps="true"
                    android:fontFamily="@font/louis_george_cafe_bold"
                    android:paddingVertical="@dimen/dim_10_dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>